Bug 281741 - "Show track" when tracking broken in master
Summary: "Show track" when tracking broken in master
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-10 11:04 UTC by Bernhard Beschow
Modified: 2011-09-10 18:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-09-10 11:04:22 UTC
Version:           unspecified
OS:                Linux

Marble doesn't show a track when tracking is enabled.

Reproducible: Always

Steps to Reproduce:
Start gpsfake and enable tracking.

Actual Results:  
No track is shown.

Expected Results:  
Track is shown.

The offending commit is: https://projects.kde.org/projects/kde/kdeedu/marble/repository/revision?rev=185c4bbc351b4fc3141f3cb3341b8de9f30c55df
Comment 1 Thibaut Gridel 2011-09-10 18:09:30 UTC
Git commit f59f9591a051f296d96944b4d1ba6234846ac4c8 by Thibaut Gridel.
Committed on 10/09/2011 at 20:08.
Pushed by tgridel into branch 'master'.

GeoGraphicsItems should use pointers

This fixes the track display bug, as the graphicsitems now get the geometry
data directly from the model

Thanks: Guillaume Martres
BUG: 281741

M  +6    -2    src/lib/PositionTracking.cpp
M  +10   -16   src/lib/geodata/graphicsitem/GeoLineStringGraphicsItem.cpp
M  +3    -4    src/lib/geodata/graphicsitem/GeoLineStringGraphicsItem.h
M  +9    -8    src/lib/geodata/graphicsitem/GeoPolygonGraphicsItem.cpp
M  +3    -3    src/lib/geodata/graphicsitem/GeoPolygonGraphicsItem.h
M  +2    -4    src/lib/layers/GeometryLayer.cpp

http://commits.kde.org/marble/f59f9591a051f296d96944b4d1ba6234846ac4c8