GeoGraphicsItems should use pointers

This fixes the track display bug, as the graphicsitems now get the geometry
data directly from the model

Thanks: Guillaume Martres
BUG: 281741